# eisgenerator

./: .gitmodules  CMakeLists.txt  README.md  accumplot.sh  basicmath.cpp  bench.cpp  cap.cpp  cap.h  compcache.cpp  compcache.h  compile-win.cpp  compile.cpp  compile.h  componant.cpp  componant.h  constantphase.cpp  constantphase.h  crossW64.cmake  density.p  eisgenerator_plot  eistype.cpp  finitetr.cpp  inductor.cpp  kissplotcsv  linearregession.cpp  linearregession.h  log.cpp  main.cpp  model.cpp  model.h  normalize.cpp  options.h  package-win.sh  paralellseriel.cpp  paralellseriel.h  randomgen.cpp  randomgen.h  resistor.cpp  resistor.h  spectra.cpp  (+7 more)
argp/: argp-pin.c
componant/: cap.cpp  componant.cpp  constantphase.cpp  finitetr.cpp  inductor.cpp  paralellseriel.cpp  resistor.cpp  trc.cpp  tro.cpp  warburg.cpp
doc/: CompiledExecution.odg  DirectExecution.odg  DoxygenLayout.xml  TorchExecution.odg  libeisgenerator.doxygen.in  mainpage.md.in  modelspage.md.in
eisgenerator/: basicmath.h  cap.h  componant.h  constantphase.h  eistype.h  finitetr.h  inductor.h  log.h  model.h  normalize.h  paralellseriel.h  resistor.h  spectra.h  translators.h  warburg.h
eisgenerator/componant/: cap.h  componant.h  constantphase.h  finitetr.h  inductor.h  paralellseriel.h  resistor.h  trc.h  tro.h  warburg.h
examples/: CMakeLists.txt  MIT.txt  compileing.cpp  simple.cpp  torchscript.cpp
pkgconfig/: libeisgenerator.pc.in
